changed hero to general background image, fixed css styling for readability

--- a/src/App.css
+++ b/src/App.css
@@ -6,19 +6,15 @@
   text-align: center;
 }
 
-.App-header {
-  background-image: url("./images/hero-image.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+.App main {
+  background: white;
   border-radius: 8px;
-
-  margin: 30px auto;
-  max-width: 80%;
-  padding: 150px 0;
+  opacity: 0.8;
+  padding: 30px 0;
 }
 
 .App h1 {
-  color: white;
+  color: var(--main-branding-color);
   font-family: "Itim", cursive;
   font-size: 16px;
 }
