--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,9 @@
-
+body {
+  background-image: url("./images/hero-image.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 8px;
+  margin: 30px auto;
+  max-width: 80%;
+  padding: 100px 0;
+}
